Added api defintion for user handling
